add_executable(burgers_caf_tau main.F90 field.F90 periodic_2nd_order.F90 kind_parameters.F90 library/co_object_interface.F90 library/object_interface.F90 math_constants.F90 library/ForTrilinos_assertion_utility.F90 library/ForTrilinos_error.F90)
set(include_directory ./include-files)

if ("${CMAKE_Fortran_COMPILER_ID}" MATCHES "Cray")
  configure_file(${include_directory}/cray_capabilities.txt ${CMAKE_CURRENT_SOURCE_DIR}/library/compiler_capabilities.txt copyonly)
  configure_file(${include_directory}/cray_capabilities.txt ${CMAKE_CURRENT_SOURCE_DIR}/compiler_capabilities.txt copyonly)
elseif ("${CMAKE_Fortran_COMPILER_ID}" MATCHES "Intel")
  configure_file(${include_directory}/intel_capabilities.txt ${CMAKE_CURRENT_SOURCE_DIR}/library/compiler_capabilities.txt copyonly)
  configure_file(${include_directory}/intel_capabilities.txt ${CMAKE_CURRENT_SOURCE_DIR}/compiler_capabilities.txt copyonly)
elseif ("${CMAKE_Fortran_COMPILER_ID}" MATCHES "GNU")
  configure_file(${include_directory}/gfortran_capabilities.txt ${CMAKE_CURRENT_SOURCE_DIR}/library/compiler_capabilities.txt copyonly)
  configure_file(${include_directory}/gfortran_capabilities.txt ${CMAKE_CURRENT_SOURCE_DIR}/compiler_capabilities.txt copyonly)
elseif ("${CMAKE_Fortran_COMPILER_ID}" MATCHES "VisualAge|XL")
  configure_file(${include_directory}/ibm_capabilities.txt ${CMAKE_CURRENT_SOURCE_DIR}/library/compiler_capabilities.txt copyonly)
  configure_file(${include_directory}/ibm_capabilities.txt ${CMAKE_CURRENT_SOURCE_DIR}/compiler_capabilities.txt copyonly)
elseif ("${CMAKE_Fortran_COMPILER_ID}" MATCHES "PGI")
  configure_file(${include_directory}/portlandgroup_capabilities.txt ${CMAKE_CURRENT_SOURCE_DIR}/library/compiler_capabilities.txt copyonly)
  configure_file(${include_directory}/portlandgroup_capabilities.txt ${CMAKE_CURRENT_SOURCE_DIR}/compiler_capabilities.txt copyonly)
elseif ("${CMAKE_Fortran_COMPILER_ID}" MATCHES "NAG")
  configure_file(${include_directory}/nag_capabilities.txt ${CMAKE_CURRENT_SOURCE_DIR}/library/compiler_capabilities.txt copyonly)
  configure_file(${include_directory}/nag_capabilities.txt ${CMAKE_CURRENT_SOURCE_DIR}/compiler_capabilities.txt copyonly)
endif()
set_directory_properties(PROPERTIES ADDITIONAL_MAKE_CLEAN_FILES "${CMAKE_CURRENT_SOURCE_DIR}/compiler_capabilities.txt;${CMAKE_CURRENT_SOURCE_DIR}/library/compiler_capabilities.txt")
